[gd_scene load_steps=6 format=3 uid="uid://c88p26kmuj5fw"]

[ext_resource type="Script" uid="uid://duj2tp7nwbyf" path="res://Creatures/Components-Scripts/health_component.gd" id="1_jqaur"]
[ext_resource type="StyleBox" uid="uid://ddemw1shpdae2" path="res://Resources/ResourceBarBackground01.tres" id="2_nheb4"]
[ext_resource type="StyleBox" uid="uid://bp7hh5ftt14iw" path="res://Resources/HealthBarBasic.tres" id="3_l1dc2"]
[ext_resource type="StyleBox" uid="uid://dpjooy8swasju" path="res://Resources/GuardBarBasicBlue.tres" id="4_am5mg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2prju"]

[node name="HealthComponent" type="PanelContainer"]
offset_left = -20.0
offset_right = 20.0
offset_bottom = 16.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_2prju")
script = ExtResource("1_jqaur")

[node name="HealthBar" type="Panel" parent="."]
custom_minimum_size = Vector2(32, 5)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = ExtResource("2_nheb4")

[node name="HealthBarRed" type="Panel" parent="."]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = ExtResource("3_l1dc2")

[node name="GuardBarBlue" type="Panel" parent="."]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/panel = ExtResource("4_am5mg")
